--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
         </div>
         <!---footer begins and end here-->
         <footer>
-        <p>WIRSUNGNIN FRANCIS A.</p>
+        <p>WIRSUNGNIN FRANCIS </p>
         <p> for more HTML, CSS and codding turtorial. 
             please click on the link below to subscribe to my channel:
         </p>
